--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.5.4",
