--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
