--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build]
   command = "npm run build"
   publish = "build"
+  functions = "netlify/functions"  # or "functions", "lambda", etc.
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
   
